style.css
/* INDEX */

.is-center{
    align-items: center;
    justify-content: center;
}

.header{
    font-size: 1.5em;
    background-color: lightslategray;
    height: 20vh;
    width: 100vw;
    align-items: center;
    justify-content: center;
}

.welcomeView{
    height: 80vh;
    align-items: center;
    text-align: center;
    flex-direction: column;
}

.welcomeView button{
    margin: 5%;
}


/* SIDE BAR */

.sideBarView{
    margin: 2%;
}

.guestBtns{
    width: 15%;
    display: flex;
    flex-direction: column;
}

.menuLabels{
   
    
}

.navbar-item{
    padding: 0px !important;
}

.menuLabels{
    display: flex;
    justify-content: space-between;
}

#totalPrice{
    display: flex;
    justify-content: flex-end;
    color: maroon;
}

/* SELECT DISH */

.dishList {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    align-items:  stretch;
}

.dish{
    display: flex;
    border: 2px solid #000;
    width: 20%;
    min-width: 170px;
    max-width: 170px;
    height: 220px;
    flex-direction: column;
}

.dishSearchView{
    margin: 2%;
}

.input{
    width: 20px;
}


.peopleBtns{
    display: flex;
    flex-direction: row;
}

.guestBtns{
    flex-direction: column-reverse;
}

/* DISH DETAILS */

.dishDetailsView{
    display: flex;
    flex-direction: row;
    margin: 20px;
}

.dishSpecs{
    display: flex;
    margin: 15px;
    justify-content: stretch;
    background: gold;
}

.dishSpecs > td {
    align-content: space-evenly;
    padding: 5%;
    height: 100%;
    width: 33%;    
    
}

.dishSpecs > tr {
    width:5%;
    padding: 50px;
}
.dishName{
    font-size: 24pt;
}
@media (max-width: 960px){

    .dishDetailsView{
        display: flex;
        flex-direction: column;
        margin: 20px;
    }
    .findDish{
        display: none;
    }
}


/* OVERVIEW */

.dishOverviewView{
    margin: 10px;
    display: flex;
    justify-content: center;
}
.menuList{
    display: flex;
    flex-direction: row;
    justify-content: center;
    margin: 20px;
    
}

.price{
    display: flex;
    justify-content: flex-end;
}

#myDinner{
    padding: 20px;
    border-bottom: solid 2px;
}

#verticalLine{
    transform: rotate(90deg);
}

.recipeBtn{
    display: flex;
    justify-content: center;
    align-content: center;
}

.dishPrice{
    display: flex;
    flex-direction: row;
}


/* PRINTOUT */
.menuList{
    display: flex;
    flex-direction: row;
}

.imgName{
    display: flex;
    flex-direction: row;
    padding: 20px;
    justify-content: space-around;
}
.rightLeft{
    display: flex;
    flex-direction: row;
}

.dishRight{
    display: flex;
    flex: 2;
}
.dishLeft{
    display: flex;
    flex: 4;
}

.dishLeft p{
    padding:20px;
}

